--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <javafx.version>21.0.3</javafx.version>
+    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
     <jackson.version>2.17.1</jackson.version>
     <jts.version>1.19.0</jts.version>
     <junit.jupiter.version>5.10.2</junit.jupiter.version>
@@ -17,6 +18,11 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
     <dependency>
@@ -54,6 +60,14 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>${javafx.maven.plugin.version}</version>
+        <configuration>
+          <mainClass>app.tricount.ui.JavaFxApp</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
